--- a/vue_basic/09_监视属性/5.姓名案例_watch实现.html
+++ b/vue_basic/09_监视属性/5.姓名案例_watch实现.html
@@ -10,10 +10,9 @@
 <body>
     <div id="root">
         姓：<input type="text" v-model="firstName"><br><br>
-        名：<input type="text" v-model="lastName"><br><br>
+        名：<input type="text" v-model="lastName"><br><br><br>
         全名：<span>{{fullName}}</span>
     </div>
-
 
     <script>
         Vue.config.productionTip = false;
