--- a/vue_test/public/index.html
+++ b/vue_test/public/index.html
@@ -9,7 +9,7 @@
     <!-- 配置页签图标 -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- 引入bootStrap -->
-    <!-- <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.css"> -->
+    <link rel="stylesheet" href="<%= BASE_URL %>css/bootstrap.css">
     <!-- 配置网页标题 -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
